@@ -12,7 +12,7 @@
  * Read the entire license text here: http://www.gnu.org/licenses/lgpl.html
  */
 
-// $Id: 40calendar.js 504 2008-09-24 09:12:40Z pjf $
+// $Id: 50calendar.js 881 2009-12-05 02:54:34Z pjf $
 
 /** The Calendar object constructor. */
 Calendar = function (firstDayOfWeek, dateStr, onSelected, onClose) {
