@@ -19,7 +19,7 @@
  * than modifying calendar.js itself).
  */
 
-// $Id: 50calendar-setup.js 504 2008-09-24 09:12:40Z pjf $
+// $Id: 51calendar-setup.js 881 2009-12-05 02:54:34Z pjf $
 
 /**
  *  This function "patches" an input field (or other element) to use a calendar
